# libcbdetect

./: CMakeLists.txt  README.md  package.xml
include/libcbdetect/: boards_from_corners.h  find_corners.h
src/libcbdetect/: refine_corners.cc  score_corners.cc
